fix: use link search, add overflow auto

--- a/src/Features/Users/Users.module.scss
+++ b/src/Features/Users/Users.module.scss
@@ -1,3 +1,7 @@
+.content {
+  overflow: auto;
+}
+
 .tableRow {
   cursor: pointer;
 }
